hrusch: implementiert Methode in Saalplan